hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: csci5980-service
  labels:
    app: csci5980
spec:
  selector:
    app: csci5980
  ports:
    - name: http1
      protocol: TCP
      port: 5000
